# flask-webpack-docker

./: .env.prod.sample  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
primegrains/: Dockerfile  Dockerfile.prod  config.py  manage.py  package-lock.json  pyproject.toml
primegrains/app/: __init__.py
primegrains/app/core/: __init__.py  views.py
primegrains/app/core/templates/: delivery.html  index.html
primegrains/app/static/: .gitignore  package-lock.json  package.json  webpack.config.js
primegrains/app/static/src/assets/js/: index.js
primegrains/app/static/src/assets/styles/blocks/header/: header.scss
primegrains/app/static/src/assets/styles/components/link/: link.scss
primegrains/app/templates/: base.html
primegrains/tests/: test_basics.py
