[tool.poetry]
name = "primegrains"
version = "0.1.0"
description = "a simple webpage"
authors = ["Vitalii Shishorin <moskrc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
Flask-Script = "^2.0.6"
flake8 = "^3.8.3"
flask-webpack-loader = "^0.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
yapf = "^0.30.0"
autopep8 = "^1.5.3"
flake8 = "^3.8.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
